--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#D97706">
     <title>Projects | NamrataJain</title>
     <link rel="shortcut icon" type="image/png" href="Images/favicon.png"/>
 
@@ -72,7 +73,7 @@
         </ul>
         </footer>
 
-        <div style="height:4vh;"></div>
+        
 
 </body>
 </html>
