docs: my projects
added a section to showcase my projects.

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=1024">
     <meta name="theme-color" content="#D97706">
     <title>Projects | NamrataJain</title>
-    <link rel="shortcut icon" type="image/png" href="Images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="Images/faviconmain.png"/>
 
     <link href="/style.css" rel="stylesheet" />
 </head>
@@ -35,13 +35,24 @@
     </header>
 
     <ol reversed>
+        <section class="section">
+            <div class="container container-center">
+
+            <h2><li>Awesome Landing Page</li></h2>
+            <small>22nd July, 2021</small>
+            <p>Firms and organizations always wish to own a bussiness website for their firm.This is a landing page made using HTML5 and CSS3. </p>
+            <a class="link link-primary" href="https://njlandingpage.netlify.app" target="_blank">Try Now</a>
+            <a class="link link-secondary" href="https://github.com/Namrata-J/Project-3" target="_blank">View Source</a>
+
+        </div>    
+        </section>
     <section class="section offwhite">
         <div class="container container-center">
         
     <h2><li>Are you a Tvd fan?</li></h2>
     <small>12th July, 2021</small>
     <p>Another <strong>NodeJs</strong> CLI app.I have used CHALK to enhance it.This shows that how big fan you are of Tvd series.</p>
-    <a class="link link-primary" href="https://replit.com/@NamrataJain29/CLI-tvd-quiz#index.js" target="_blank">Try Now</a>
+    <a class="link link-primary" href="https://clitvdquizapp.netlify.app" target="_blank">Try Now</a>
     <a class="link link-secondary" href="https://github.com/Namrata-J/Project-2" target="_blank">View Source</a>
 
         </div>    
@@ -52,7 +63,7 @@
                 <h2><li>How well do you know me?</li></h2>
                 <small>8th July, 2021</small>
                 <p>A CLI app built with <strong>NodeJs</strong>.I have used CHALK to enhance it.You can send this to your friends and find out who really knows you.</p>
-                <a class="link link-primary" href="https://replit.com/@NamrataJain29/CLI-quiz-app" target="_blank">Try Now</a>
+                <a class="link link-primary" href="https://cliquiz.netlify.app" target="_blank">Try Now</a>
                 <a class="link link-secondary" href="https://github.com/Namrata-J/Project-1" target="_blank">View Source</a>
         </section>   
 
