--- a/markdown.html
+++ b/markdown.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1024">
     <title>Blog | NamrataJain</title>
-    <link rel="shortcut icon" type="image/png" href="Images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="Images/faviconblog.png"/>
 
     <link href="/blogstyle.css" rel="stylesheet" />
 </head>
