--- a/blogs.html
+++ b/blogs.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=1024">
     <meta name="theme-color" content="#D97706">
     <title>Blogs | NamrataJain</title>
-    <link rel="shortcut icon" type="image/png" href="Images/favicon.png"/>
+    <link rel="shortcut icon" type="image/png" href="Images/faviconmain.png"/>
 
     <link href="/style.css" rel="stylesheet" />
 </head>
