docs: my projects
added a section to showcase my projects.

--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
             <h2><li>Awesome Landing Page</li></h2>
             <small>22nd July, 2021</small>
             <p>Firms and organizations always wish to own a bussiness website for their firm.This is a landing page made using HTML5 and CSS3. </p>
-            <a class="link link-primary" href="https://njlandingpage.netlify.app" target="_blank">Try Now</a>
+            <a class="link link-primary" href="https://njlandingpage.netlify.app" target="_blank">View</a>
             <a class="link link-secondary" href="https://github.com/Namrata-J/Project-3" target="_blank">View Source</a>
 
         </div>    
