--- a/blogs.html
+++ b/blogs.html
@@ -37,9 +37,9 @@
 
     <section class="section">
         <div class="container container-center">
-            <h1 class="section special">NodeJs over Php!</h1>
+            <h1 class="section special">Confused with display property in CSS!?</h1>
             <small>10th July,2021</small>
-            <p>Uhmm so do you chose NodeJs over Php too!?Yes you're guessing it right,I chose NodeJs over Php.<br>There were many reasons for...</p>
+            <p>So are you finding it difficult to differentiate among CSS layouts!?.Or how's it different from visibility CSS property!?If yes,then this blog will definately and certainly help you to understand that what's the basic difference among diffferent CSS layouts.So ...</p>
             <a class="link link-primary" href="/blog1.html" target="_blank">Read Blog</a>
         </div>    
     </section>
