docs: source code
comprises info about all my projects an works.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section class="section offwhite">
         <div class="container container-center">
         <h1>Technologies</h3>
-        <p>I am familiar with HTML ,Markdown ,CSS3 ,CHALK ,Git ,VsCode ,NodeJs ,Replit ,Java ,JavaScript ,WebHosting and on my way to be a full stack developer.</p>
+        <p>I am familiar with HTML ,Markdown ,CSS3 ,CHALK ,Git ,VsCode ,NodeJs ,VanillaJs, Replit ,Java ,JavaScript ,WebHosting and on my way to be a full stack developer.</p>
         </div>
     </section>
 
