docs: my projects
this section comprises all my projects

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,17 @@
     </header>
 
     <ol reversed>
+        <section class="section offwhite">
+            <div class="container container-center">
+            
+        <h2><li>Banana Talks.</li></h2>
+        <small>28th July, 2021</small>
+        <p>Have you ever had a dream of talking to minions!?If yes, then this app is a 'dream come true for you'.This is a fun translation app made using<strong>VanillaJs</strong> which converts your english to minions language.</p>
+        <a class="link link-primary" href="https://minionbananatalks.netlify.app" target="_blank">Try Now</a>
+        <a class="link link-secondary" href="https://github.com/Namrata-J/Project-4" target="_blank">View Source</a>
+    
+            </div>    
+        </section>
         <section class="section">
             <div class="container container-center">
 
