--- a/projects.html
+++ b/projects.html
@@ -35,10 +35,21 @@
     </header>
 
     <ol reversed>
+        <section class="section">
+            <div class="container container-center">
+
+            <h2><li>Fun Translation App</li></h2>
+            <small>4th August, 2021</small>
+            <p>This is a fun translation app which is made using <strong>VanillaJs.</strong>This app converts your text into fun language of your some favourite cartoon charaters.</p>
+            <a class="link link-primary" href="https://funcartoontranslations.netlify.app" target="_blank">View</a>
+            <a class="link link-secondary" href="https://github.com/Namrata-J/Project-5" target="_blank">View Source</a>
+
+        </div>    
+        </section>
         <section class="section offwhite">
             <div class="container container-center">
             
-        <h2><li>Banana Talks.</li></h2>
+        <h2><li>Banana Talks</li></h2>
         <small>28th July, 2021</small>
         <p>Have you ever had a dream of talking to minions!?If yes, then this app is a 'dream come true for you'.This is a fun translation app made using<strong>VanillaJs</strong> which converts your english to minions language.</p>
         <a class="link link-primary" href="https://minionbananatalks.netlify.app" target="_blank">Try Now</a>
