--- a/blogs.html
+++ b/blogs.html
@@ -34,6 +34,16 @@
         <h1 class="hero-heading">Hello there!<span class="heading-inverted">Have a look at my blogs</span>:-)</h1>
     </header>
 
+    <section class="section">
+        <div class="container container-center">
+            <h1 class="section special">What does encodeURI() mean!?</h1>
+            <small>10th August,2021</small>
+            <p>Before getting into encodeURI(), let's see what is meant by the term 'encoding'!!
+
+                Encoding simply means changing the form of data.<br>Now, the question arises that why encoding is needed and ...</p>
+            <a class="link link-primary" href="https://namratajain.hashnode.dev/what-does-encodeuri-mean" target="_blank">Read Blog</a>
+        </div>    
+    </section>
 
     <section class="section">
         <div class="container container-center">
