--- a/blogs.html
+++ b/blogs.html
@@ -36,11 +36,15 @@
 
     <section class="section">
         <div class="container container-center">
+    <p class="join">You can also join me here to see my blogs: <br><br><a class="link link-primary" href="https://hashnode.com/@namratajain">Join now</a></p>
+        </div>
+    </section> 
+
+    <section class="section">
+        <div class="container container-center">
             <h1 class="section special">What does encodeURI() mean!?</h1>
             <small>10th August,2021</small>
-            <p>Before getting into encodeURI(), let's see what is meant by the term 'encoding'!!
-
-                Encoding simply means changing the form of data.<br>Now, the question arises that why encoding is needed and ...</p>
+            <p>Before getting into encodeURI(), let's see what is meant by the term 'encoding'!! Encoding simply means changing the form of data.<br>Now, the question arises that why encoding is needed and ...</p>
             <a class="link link-primary" href="https://namratajain.hashnode.dev/what-does-encodeuri-mean" target="_blank">Read Blog</a>
         </div>    
     </section>
