--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
             <li class="list-item-inline"><a class="link" href="https://www.instagram.com/the_dexterous_me?r=nametag" target="_blank">Instagram</a></li>
             <li class="list-item-inline"><a class="link" href="mailto: namratajain29001@gmail.com" target="_blank">Gmail</a></li>
             <li class="list-item-inline"><a class="link" href="https://t.me/Iam_NamrataJain" target="_blank">Telegram</a></li>
-            <li class="list-item-inline"><a class="link" href="https://www.clubhouse.com/@im_muse" target="_blank">Clubhouse</a></li>
+            <li class="list-item-inline"><a class="link" href="https://hashnode.com/@namratajain" target="_blank">Hashnode</a></li>
         </ul>
+        <p style="text-align: center; color: white;">Made by Namrata Jain © Copyright</p>
         </footer>
 
         
