docs: my projects
this section comprises all my projects.

--- a/projects.html
+++ b/projects.html
@@ -35,12 +35,25 @@
     </header>
 
     <ol reversed>
+        <section class="section">
+            <div class="container container-center">
+
+            <h2><li>Symphonize</li></h2>
+            <small>5th September, 2021</small>
+            <p>This is a music recommendation app which is made using <strong>ReactJs.</strong>I have tried to summarise some of my most favourite songs under a single roof. Do have a look at it. </p>
+            <a class="link link-primary" href="https://oxi6s.csb.app/" target="_blank">Codesandbox</a>
+            <a class="link link-primary" href="https://symphonize.netlify.app" target="_blank">Try Now</a>
+            <a class="link link-secondary" href="https://github.com/Namrata-J/Project-7" target="_blank">View Source</a>
+
+        </div>    
+        </section>
         <section class="section offwhite">
             <div class="container container-center">
             
         <h2><li>C-A-S-E-S Interpreter</li></h2>
         <small>1st September, 2021</small>
         <p>This is an interpreter app made using <strong>ReactJs</strong> which interprets the emoji meaning.</p>
+        <a class="link link-primary" href="https://emrdk.csb.app/" target="_blank">Codesandbox</a>
         <a class="link link-primary" href="https://casesinterpreter.netlify.app" target="_blank">Try Now</a>
         <a class="link link-secondary" href="https://github.com/Namrata-J/Project-6" target="_blank">View Source</a>
     
