--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,18 @@
     </header>
 
     <ol reversed>
+    </section>
+    <section class="section offwhite">
+        <div class="container container-center">
+        
+    <h2><li>Cash Rejister</li></h2>
+    <small>7tht September, 2021</small>
+    <p>This app is made using <strong>ReactJs.</strong> It tells you how much and what are the cash notes that needs to be returned to the customer.</p>
+    <a class="link link-primary" href="cashrejister.netlify.app" target="_blank">Try Now</a>
+    <a class="link link-secondary" href="https://github.com/Namrata-J/Project-8" target="_blank">View Source</a>
+
+        </div>    
+    </section>
         <section class="section">
             <div class="container container-center">
 
@@ -65,7 +77,7 @@
             <h2><li>Fun Translation App</li></h2>
             <small>4th August, 2021</small>
             <p>This is a fun translation app which is made using <strong>VanillaJs.</strong>This app converts your text into fun language of your some favourite cartoon charaters.</p>
-            <a class="link link-primary" href="https://funcartoontranslations.netlify.app" target="_blank">View</a>
+            <a class="link link-primary" href="https://funcartoontranslations.netlify.app" target="_blank">Try Now</a>
             <a class="link link-secondary" href="https://github.com/Namrata-J/Project-5" target="_blank">View Source</a>
 
         </div>    
