docs: my projects
this section comprises all my projects.

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
     <h2><li>Cash Rejister</li></h2>
     <small>7tht September, 2021</small>
     <p>This app is made using <strong>ReactJs.</strong> It tells you how much and what are the cash notes that needs to be returned to the customer.</p>
-    <a class="link link-primary" href="cashrejister.netlify.app" target="_blank">Try Now</a>
+    <a class="link link-primary" href="https://cashrejister.netlify.app" target="_blank">Try Now</a>
     <a class="link link-secondary" href="https://github.com/Namrata-J/Project-8" target="_blank">View Source</a>
 
         </div>    
