--- a/projects.html
+++ b/projects.html
@@ -35,13 +35,23 @@
     </header>
 
     <ol reversed>
-    </section>
+        <section class="section">
+            <div class="container container-center">
+
+            <h2><li>Symphonize</li></h2>
+            <small>7thth September, 2021</small>
+            <p>This is a fun app made using<strong>VanillaJs</strong> which tells you whether you birthday is lucky.</p>
+            <a class="link link-primary" href="https://dobcheck.netlify.app" target="_blank">Try Now</a>
+            <a class="link link-secondary" href="https://github.com/Namrata-J/Project-9" target="_blank">View Source</a>
+
+        </div>    
+        </section>
     <section class="section offwhite">
         <div class="container container-center">
         
     <h2><li>Cash Rejister</li></h2>
     <small>7tht September, 2021</small>
-    <p>This app is made using <strong>ReactJs.</strong> It tells you how much and what are the cash notes that needs to be returned to the customer.</p>
+    <p>This app is made using <strong>VanillaJs.</strong> It tells you how much and what are the cash notes that needs to be returned to the customer.</p>
     <a class="link link-primary" href="https://cashrejister.netlify.app" target="_blank">Try Now</a>
     <a class="link link-secondary" href="https://github.com/Namrata-J/Project-8" target="_blank">View Source</a>
 
