docs: my projects
this section comprises all my projects.

--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
         <section class="section">
             <div class="container container-center">
 
-            <h2><li>Symphonize</li></h2>
+            <h2><li>Lucky Birthday!?</li></h2>
             <small>7thth September, 2021</small>
             <p>This is a fun app made using<strong>VanillaJs</strong> which tells you whether you birthday is lucky.</p>
             <a class="link link-primary" href="https://dobcheck.netlify.app" target="_blank">Try Now</a>
