--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
         <small>9th September, 2021</small>
         <p>Tech Stack: <strong>VanillaJs, HTML5, CSS3, VsCode</strong></p>
         <p>Have fun with triangles. Interacting with this app wil let you know how fun it is to deal with triangles.</p>
-        <a class="link link-primary" href="https://https://dofunwithtriangles.netlify.app" target="_blank">Try Now</a>
+        <a class="link link-primary" href="https://dofunwithtriangles.netlify.app" target="_blank">Try Now</a>
         <a class="link link-secondary" href="https://github.com/Namrata-J/Project-10" target="_blank">View Source</a>
     
             </div>    
