docs: my projects
this section comprises all my projects.

--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,18 @@
     </header>
 
     <ol reversed>
+        <section class="section">
+            <div class="container container-center">
+
+            <h2><li>Is your birthday a palindrome!?</li></h2>
+            <small>10th September, 2021</small>
+            <p>Tech Stack: <strong>VanillaJs, HTML5, CSS3, VsCode</strong></p>
+            <p>Do you wanna know if your birthday is a palindrome? If yes, then do try this app. This is fun app which tells you if your birthday is a palindrome and if not, then it also tells you the closest palindrome date.</p>
+            <a class="link link-primary" href="https://isbirthdayapalindrome.netlify.app" target="_blank">Try Now</a>
+            <a class="link link-secondary" href="https://github.com/Namrata-J/Project-11" target="_blank">View Source</a>
+
+        </div>    
+        </section>
         <section class="section offwhite">
             <div class="container container-center">
             
