--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,18 @@
     </header>
 
     <ol reversed>
+        <section class="section offwhite">
+            <div class="container container-center">
+            
+        <h2><li>Where are my stockers!?</li></h2>
+        <small>11th September, 2021</small>
+        <p>Tech Stack: <strong>VanillaJs, HTML5, CSS3, VsCode</strong></p>
+        <p>this app tells you the profit and loss you made in your stock purchase.</p>
+        <a class="link link-primary" href="https://wherearemystockers.netlify.app" target="_blank">Try Now</a>
+        <a class="link link-secondary" href="https://github.com/Namrata-J/Project-12" target="_blank">View Source</a>
+    
+            </div>    
+        </section>
         <section class="section">
             <div class="container container-center">
 
