--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li class="list-item-inline"><a class="link" href="https://www.instagram.com/the_dexterous_me?r=nametag" target="_blank">Instagram</a></li>
             <li class="list-item-inline"><a class="link" href="mailto: namratajain29001@gmail.com" target="_blank">Gmail</a></li>
             <li class="list-item-inline"><a class="link" href="https://t.me/Iam_NamrataJain" target="_blank">Telegram</a></li>
-            <li class="list-item-inline"><a class="link" href="https://hashnode.com/@namratajain" target="_blank">Hashnode</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/namrata-jain-2b6203216/" target="_blank">LinkedIn</a></li>
         </ul>
         <p style="text-align: center; color: white;">Made by Namrata Jain © Copyright</p>
         </footer>
