docs: added documentation.

--- a/blog1.html
+++ b/blog1.html
@@ -71,5 +71,8 @@
     <p>The visibility hidden also hides the element.The visibility: hidden; rule hides an element on a document and leaves the space in which the element would have appeared empty.The element will still take up the same space as before or more precisely to say, the element will be hidden,but will still affect the layout.</p>
     <img src="Images/img7.png"> 
     <img src="Images/img8.png"> 
+
+    <hr>
+    <p style="text-align: center;">Made by Namrata Jain © Copyright</p>
 </body>
 </html>
