--- a/markdown.html
+++ b/markdown.html
@@ -76,5 +76,7 @@
     <img class="photo" src="Images/markdown-syntax3.png">
 
     <div style="height:10vh;"></div>
+    <hr>
+    <p style="text-align: center;">Made by Namrata Jain © Copyright</p>
 </body>
 </html>
