docs(update): updated the projects and blogs

--- a/blogs.html
+++ b/blogs.html
@@ -42,6 +42,60 @@
 
     <section class="section">
         <div class="container container-center">
+            <h1 class="section special">Let's discuss authorization strategies!!</h1>
+            <small>12th May,2022</small>
+            <p>Do you find it difficult to understand things when it comes to authorization!!?? Let's discuss JWT then! · Hello folks!! How you all doin'!!?? As...</p>
+            <a class="link link-primary" href="https://namratajain.hashnode.dev/lets-discuss-authorization-strategies" target="_blank">Read Blog</a>
+        </div>    
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1 class="section special">What are HTTP Requests and HTTP responses!!?? How do both of them differ!?</h1>
+            <small>11th May,2022</small>
+            <p>HTTP Request vs HTTP Response vs HTTP Methods vs HTTP headers vs HTTP status code · Hey folks, How y'all doing!? I am back with another amazing and...</p>
+            <a class="link link-primary" href="https://namratajain.hashnode.dev/what-are-http-requests-and-http-responses-how-do-both-of-them-differ" target="_blank">Read Blog</a>
+        </div>    
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1 class="section special">programming language vs scripting language</h1>
+            <small>27th February,2022</small>
+            <p>Is scripting language also a programming language!? · Hi folks, As promised here i am back with another amazing blog. In this blog we'll be focusing on...</p>
+            <a class="link link-primary" href="https://namratajain.hashnode.dev/programming-language-vs-scripting-language" target="_blank">Read Blog</a>
+        </div>    
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1 class="section special">transpiler vs compiler vs interpreter</h1>
+            <small>17th February,2022</small>
+            <p>same same but different!! · Hi folks!! As promised i am back with an amazing blog. In this blog we will cover the most popular terms which sounds alike...</p>
+            <a class="link link-primary" href="https://namratajain.hashnode.dev/transpiler-vs-compiler-vs-interpreter" target="_blank">Read Blog</a>
+        </div>    
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1 class="section special">I got stucked while using onChange event in vanillaJs, know why!?</h1>
+            <small>3rd october,2021</small>
+            <p>You learn when you make mistakes, you learn from your failures, and you implement those learnings to overcome your mistakes and failures. · Hey folks! I...</p>
+            <a class="link link-primary" href="https://namratajain.hashnode.dev/i-got-stucked-while-using-onchange-event-in-vanillajs-know-why" target="_blank">Read Blog</a>
+        </div>    
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
+            <h1 class="section special">Switching Techniques in computer networking!!</h1>
+            <small>14th September,2021</small>
+            <p>What is switching!? How many types of switching techniques are there!? · Hey folks! How you all doin'!? <br>As promised i am back with another blog. So...</p>
+            <a class="link link-primary" href="https://namratajain.hashnode.dev/switching-techniques-in-computer-networking" target="_blank">Read Blog</a>
+        </div>    
+    </section>
+
+    <section class="section">
+        <div class="container container-center">
             <h1 class="section special">What does encodeURI() mean!?</h1>
             <small>10th August,2021</small>
             <p>Before getting into encodeURI(), let's see what is meant by the term 'encoding'!!Encoding simply means changing the form of data.<br>Now, the question arises that why encoding is needed and ...</p>
